<resources>
    <string name="app_name">TaskMaster</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="title_activity_all_tasks">AllTasks</string>
    <string name="your_name">Your Name</string>
    <string name="all_tasks_heading">All Tasks</string>
    <string name="add_task_heading">Add Task</string>
    <string name="settings_heading">Settings</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="add_your_name">Add your name</string>
    <string name="delete_task">Delete task</string>
    <string name="save">Save</string>
    <string name="shared_preferences_name">edhou.taskmaster</string>
    <string name="user_details_shared_preferences">edhou.taskmaster.user_details</string>
    <string name="task1_name">Do the dishes</string>
    <string name="task1_description">Scrub \'em real good</string>
    <string name="task2_name">Mow the lawn</string>
    <string name="task2_description">Mow them grasses real short</string>
    <string name="task3_name">Grill the burgers</string>
    <string name="task3_description">Grill them burgers up real tasty</string>
    <string name="task4_name">Eat the food</string>
    <string name="task4_description">Eat that food real yum yum</string>
    <string name="status_new">New task</string>
    <string name="status_assigned">Assigned</string>
    <string name="status_in_progress">In progress</string>
    <string name="status_complete">Complete</string>
    <string name="add_team">Add Team</string>
    <string name="team_name_hint">Team Name</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_sign_up">Confirm Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log In</string>
    <string name="msg_token_fmt">Token: %s</string>
    <string name="notification_received">Notification received! %s</string>

</resources>